--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/*!
+ * Copyright (c) 2025 [DeineStrainReviewsDev](https://github.com/DeineStrainReviewsDev)
+ */
+
 /* Basic Reset Styles - Remove default margins and paddings from all elements */
 * {
   margin: 0; /* Remove default margin */
